--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ivan Tesorero | Game Programmer</title>
+    <title>Ivan Tesorero | Game Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Source+Code+Pro:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,48 +11,61 @@
 
     <div class="portfolio-wrapper">
         <aside class="sidebar">
-    <div class="profile-section">
-        <img src="Image/Tesorero_Ivan.jpg" alt="Ivan L. Tesorero" class="profile-img">
-        <h1>Ivan L. Tesorero</h1> 
-        <p class="tagline">Game Programmer</p> 
-        <p class="bio">Passionate about creating games that offer <strong>fun</strong> and <strong>meaningful</strong> player experiences.</p>
-    </div>
+            <div class="profile-section">
+                <img src="Image/Tesorero_Ivan.jpg" alt="Ivan L. Tesorero" class="profile-img">
+                <h1>Ivan L. Tesorero</h1> 
+                <p class="tagline">Game Programmer</p> 
+                <p class="bio">Passionate about creating games that offer <strong>fun</strong> and <strong>meaningful</strong> player experiences.</p>
+            </div>
 
-    <div class="contact-info">
-        <h3>Contact</h3>
-        <p>📍 Naga City, Philippines</p>
-        <p>📧 <a href="mailto:ivantesorero0@gmail.com">ivantesorero0@gmail.com</a></p>
-        <p>📞 +09937635110</p>
-        <a href="path-to-your-cv.pdf" class="download-btn" download>
-            <span>📄 Download CV (PDF)</span>
-        </a>
-    </div>
+            <div class="contact-info">
+                <h3>Contact</h3>
+                <p>📍 Naga City, Philippines</p>
+                <p>📧 <a href="mailto:ivantesorero0@gmail.com">ivantesorero0@gmail.com</a></p>
+                <p>📞 +09937635110</p>
+                <a href="TESORERO_CV.pdf" class="download-btn" download>
+                    <span>📄 Download CV (PDF)</span>
+                </a>
+            </div>
 
-    <div class="sidebar-block">
-        <h3>Technical Skills</h3>
-        <div class="skill-container">
-            <span class="skill-badge unity">Unity</span>
-            <span class="skill-badge csharp">C#</span>
-            <span class="skill-badge cpp">C++</span>
-            <span class="skill-badge vfx">Game VFX</span>
-            <span class="skill-badge tools">GitHub</span>
-            <span class="skill-badge tools">Maya</span>
-            <span class="skill-badge tools">Adobe Suite</span>
-        </div>
-    </div>
-    </aside>
+            <div class="achievements">
+                <h3>Achievements</h3>
+                <div class="achievement-item">
+                    <span class="dot-marker gold"></span>
+                    <p>🏆 2nd Runner Up - Bicol Myth Game Jam (2025)</p>
+                </div>
+                <div class="achievement-item">
+                    <span class="dot-marker blue"></span>
+                    <p>🎖️ Top 19 Semi-Finalist - YCC2</p>
+                </div>
+            </div>
+
+            <div class="sidebar-block">
+                <h3>Technical Skills</h3>
+                <div class="skill-container">
+                    <span class="skill-badge unity">Unity</span>
+                    <span class="skill-badge csharp">C#</span>
+                    <span class="skill-badge cpp">C++</span>
+                    <span class="skill-badge vfx">Game VFX</span>
+                    <span class="skill-badge tools">GitHub</span>
+                    <span class="skill-badge tools">Maya</span>
+                    <span class="skill-badge tools">Adobe Suite</span>
+                </div>
+            </div>
+        </aside>
 
         <main class="main-content">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
+                
                 <div class="project-card">
                     <div class="project-gallery">
                         <div class="slider" id="slider-saldang">
-                            <img src="Image/xwnWfT.png" class="slide active" alt="Saldang Gameplay">
-                            <img src="Image/saldang (1).jpg" class="slide" alt="Saldang Gameplay">
-                            <img src="Image/saldang (2).jpg" class="slide" alt="Saldang Gameplay">
-                            <img src="Image/saldang (3).jpg" class="slide" alt="Saldang Gameplay">
-                            <img src="Image/saldang (4).jpg" class="slide" alt="Saldang Gameplay">
+                            <img src="Image/xwnWfT.png" class="slide active">
+                            <img src="Image/saldang (1).jpg" class="slide">
+                            <img src="Image/saldang (2).jpg" class="slide">
+                            <img src="Image/saldang (3).jpg" class="slide">
+                            <img src="Image/saldang (4).jpg" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-saldang', -1)">Prev</button>
@@ -61,22 +74,21 @@
                     </div>
                     <div class="project-info">
                         <h3>Saldang</h3> 
-                        <p class="genre">2D Action Roguelike</p>
-                        <p class="award">Won 2nd Runner Up in Bicol Myth Game Jam (November 2025)</p>
-                        <p class="desc">I used C# and Unity to build the main gameplay and combat systems. I created the system that handles enemy waves and spawns large numbers of enemies at once.
-                            I also built a power-up system similar to 'Vampire Survivors' to make the game more exciting as you play.</p>
-                        <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600" target="_blank">https://itch.io/saldang</a></p>
+                        <span class="genre-badge">2D Action Roguelike</span>
+                        <p class="award">Won 2nd Runner Up - Bicol Myth Game Jam</p>
+                        <p class="desc">Built main gameplay and combat systems in C#. Handles massive enemy waves and a 'Vampire Survivors' style power-up system.</p>
+                        <p class="itch-link">itch.io: <a href="https://itch.io/saldang">Visit Project</a></p>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-gallery">
                         <div class="slider" id="slider-kupido">
-                            <img src="Image/MR. KUPIDO.png.jpeg" class="slide active" alt="Mr. Kupido Gameplay">
-                            <img src="Image/kupido (1).png" class="slide" alt="Mr. Kupido Gameplay">
-                            <img src="Image/kupido (2).png" class="slide" alt="Mr. Kupido Gameplay">
-                            <img src="Image/kupido (3).png" class="slide" alt="Mr. Kupido Gameplay">
-                            <img src="Image/kupido (4).png" class="slide" alt="Mr. Kupido Gameplay">
+                            <img src="Image/MR. KUPIDO.png.jpeg" class="slide active">
+                            <img src="Image/kupido (1).png" class="slide">
+                            <img src="Image/kupido (2).png" class="slide">
+                            <img src="Image/kupido (3).png" class="slide">
+                            <img src="Image/kupido (4).png" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-kupido', -1)">Prev</button>
@@ -85,21 +97,21 @@
                     </div>
                     <div class="project-info">
                         <h3>Mr. Kupido</h3> 
-                        <p class="genre">2D Casual, Puzzle</p>
-                        <p class="award">Top 19 Semi-Finalist for the Young Creatives Challenge (YCC2)</p>
-                        <p class="desc">Its a prototype game our classmates made. I <strong>programmed</strong> most of the gameplay interactive mechanics and I also made the <strong>random NPC generation system</strong> for the puzzle mechanics.</p>
+                        <span class="genre-badge">2D Casual, Puzzle</span>
+                        <p class="award">Top 19 Semi-Finalist (YCC2)</p>
+                        <p class="desc">Programmed interactive mechanics and a <strong>random NPC generation system</strong> for puzzles.</p>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-gallery">
                         <div class="slider" id="slider-sort">
-                            <img src="Image/plastic cup.png" class="slide active" alt="Sort-It-Out">
-                            <img src="Image/capstone (1).jpg" class="slide" alt="Sort-It-Out">
-                            <img src="Image/capstone (2).jpg" class="slide" alt="Sort-It-Out">
-                            <img src="Image/capstone (3).jpg" class="slide" alt="Sort-It-Out">
-                            <img src="Image/capstone (4).jpg" class="slide" alt="Sort-It-Out">
-                            <img src="Image/capstone (5).jpg" class="slide" alt="Sort-It-Out">
+                            <img src="Image/plastic cup.png" class="slide active">
+                            <img src="Image/capstone (1).jpg" class="slide">
+                            <img src="Image/capstone (2).jpg" class="slide">
+                            <img src="Image/capstone (3).jpg" class="slide">
+                            <img src="Image/capstone (4).jpg" class="slide">
+                            <img src="Image/capstone (5).jpg" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-sort', -1)">Prev</button>
@@ -108,20 +120,18 @@
                     </div>
                     <div class="project-info">
                         <h3>Sort-It-Out</h3> 
-                        <p class="genre">3D Survival, Exploration</p>
-                        <p class="desc">Developed for <strong>CAPSTONE Project</strong>. This game teaches proper <strong>waste management</strong> through trash sorting and survival mechanics. I implemented the core systems including waste sorting, survival management, and exploration using C# and Unity.</p>
+                        <span class="genre-badge">3D Survival, Exploration</span>
+                        <p class="desc"><strong>CAPSTONE Project</strong>. Teaches waste management through survival mechanics and trash sorting.</p>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-gallery">
                         <div class="slider" id="slider-dragon">
-                            <img src="Image/Chrage.png" class="slide active" alt="Dragon Gears">
-                            <img src="Image/dragon (1).png" class="slide" alt="Dragon Gears">
-                            <img src="Image/dragon (2).png" class="slide" alt="Dragon Gears">
-                            <img src="Image/dragon (3).png" class="slide" alt="Dragon Gears">
-                            <img src="Image/dragon (4).png" class="slide" alt="Dragon Gears">
-                            <img src="Image/dragon (5).png" class="slide" alt="Dragon Gears">
+                            <img src="Image/Chrage.png" class="slide active">
+                            <img src="Image/dragon (1).png" class="slide">
+                            <img src="Image/dragon (2).png" class="slide">
+                            <img src="Image/dragon (3).png" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-dragon', -1)">Prev</button>
@@ -130,20 +140,20 @@
                     </div>
                     <div class="project-info">
                         <h3>Dragon Gears</h3> 
-                        <p class="genre">2D Platformer, Shooter</p>
-                        <p class="desc">A hard shooter platformer game its a <strong>solo project</strong> featuring precision platforming and <strong>difficult bosses</strong>. I developed the game systems including player movement, shooting mechanics, enemy AI, and Boss design.</p>
-                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/dragon-gears" target="_blank">https://itch.io/dragongears</a></p>
+                        <span class="genre-badge">2D Platformer, Shooter</span>
+                        <p class="desc">Solo project featuring precision platforming and <strong>difficult bosses</strong>. Developed player AI and movement.</p>
+                        <p class="itch-link">itch.io: <a href="https://itch.io/dragongears">Visit Project</a></p>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-gallery">
                         <div class="slider" id="slider-bolz">
-                            <img src="Image/Bolz MiniGame Poster.jpg" class="slide active" alt="Bolz">
-                            <img src="Image/Bolz (4).png" class="slide" alt="Bolz">
-                            <img src="Image/Bolz (3).png" class="slide" alt="Bolz">
-                            <img src="Image/Bolz (2).png" class="slide" alt="Bolz">
-                            <img src="Image/Bolz (1).png" class="slide" alt="Bolz">
+                            <img src="Image/Bolz MiniGame Poster.jpg" class="slide active">
+                            <img src="Image/Bolz (4).png" class="slide">
+                            <img src="Image/Bolz (3).png" class="slide">
+                            <img src="Image/Bolz (2).png" class="slide">
+                            <img src="Image/Bolz (1).png" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-bolz', -1)">Prev</button>
@@ -152,9 +162,8 @@
                     </div>
                     <div class="project-info">
                         <h3>Bolz</h3> 
-                        <p class="genre">Casual, Arcade</p>
-                        <p class="desc">A <strong>solo developed</strong> game. It is a simple brick breaking game but I added an <strong>upgrade system</strong> and the bricks fall down instead, which makes the game more engaging.</p>
-                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz" target="_blank">https://itch.io/bolz</a></p>
+                        <span class="genre-badge">Casual, Arcade</span>
+                        <p class="desc">Solo project. A brick breaker with an <strong>upgrade system</strong> and falling brick mechanics.</p>
                     </div>
                 </div>
             </div>
@@ -162,9 +171,5 @@
     </div>
 
     <script src="script.js"></script>
-    <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-    <span class="close-btn">&times;</span>
-    <img id="lightbox-img" src="" alt="Enlarged View">
-</div>
 </body>
 </html>
