--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <span class="genre-badge">2D Action Roguelike</span>
                         <p class="award">Won 2nd Runner Up - Bicol Myth Game Jam</p>
                         <p class="desc">Built main gameplay and combat systems in C#. Handles massive enemy waves and a 'Vampire Survivors' style power-up system.</p>
-                        <p class="itch-link">itch.io: <a href="https://itch.io/saldang">Visit Project</a></p>
+                        <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600">Visit Project</a></p>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <h3>Dragon Gears</h3> 
                         <span class="genre-badge">2D Platformer, Shooter</span>
                         <p class="desc">Solo project featuring precision platforming and <strong>difficult bosses</strong>. Developed player AI and movement.</p>
-                        <p class="itch-link">itch.io: <a href="https://itch.io/dragongears">Visit Project</a></p>
+                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/dragon-gears">Visit Project</a></p>
                     </div>
                 </div>
 
@@ -164,6 +164,7 @@
                         <h3>Bolz</h3> 
                         <span class="genre-badge">Casual, Arcade</span>
                         <p class="desc">Solo project. A brick breaker with an <strong>upgrade system</strong> and falling brick mechanics.</p>
+                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz">Visit Project</a></p>
                     </div>
                 </div>
             </div>
