--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="profile-section">
                 <img src="Image/Tesorero_Ivan.jpg" alt="Ivan L. Tesorero" class="profile-img">
                 <h1>Ivan L. Tesorero</h1> 
-                <p class="tagline">Game Programmer</p> 
+                <p class="tagline">Game Developer</p> 
                 <p class="bio">Passionate about creating games that offer <strong>fun</strong> and <strong>meaningful</strong> player experiences.</p>
             </div>
 
@@ -76,7 +76,7 @@
                         <h3>Saldang</h3> 
                         <span class="genre-badge">2D Action Roguelike</span>
                         <p class="award">Won 2nd Runner Up - Bicol Myth Game Jam</p>
-                        <p class="desc">Built main gameplay and combat systems in C#. Handles massive enemy waves and a 'Vampire Survivors' style power-up system.</p>
+                        <p class="desc">A Vampire-Survivor like game with illumanation mechanics. I built <strong>main gameplay, Combat systems, Dynamic enemy spawn, Boss design and a Different upgrade system from Vampire Survivor in C#. </strong></p>
                         <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600">Visit Project</a></p>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                         <h3>Mr. Kupido</h3> 
                         <span class="genre-badge">2D Casual, Puzzle</span>
                         <p class="award">Top 19 Semi-Finalist (YCC2)</p>
-                        <p class="desc">Programmed interactive mechanics and a <strong>random NPC generation system</strong> for puzzles.</p>
+                        <p class="desc">A simple point and click puzzle with fun concept like the <strong>"Couple of the day missions"</strong>. I Programmed interactive mechanics and a <strong>random NPC generation system</strong> for puzzles.</p>
                     </div>
                 </div>
 
@@ -121,7 +121,7 @@
                     <div class="project-info">
                         <h3>Sort-It-Out</h3> 
                         <span class="genre-badge">3D Survival, Exploration</span>
-                        <p class="desc"><strong>CAPSTONE Project</strong>. Teaches waste management through survival mechanics and trash sorting.</p>
+                        <p class="desc"><strong>Capstone Project</strong>. Teaches waste management through survival mechanics and trash sorting. I programmed most of the game systems including <strong>Player controls and systems, Inventory System, Item Interactions, and  Random generated rooms</strong>.</p>
                     </div>
                 </div>
 
@@ -163,7 +163,7 @@
                     <div class="project-info">
                         <h3>Bolz</h3> 
                         <span class="genre-badge">Casual, Arcade</span>
-                        <p class="desc">Solo project. A brick breaker with an <strong>upgrade system</strong> and falling brick mechanics.</p>
+                        <p class="desc">Solo project. A simple brick breaker game with a fun twist to it. An <strong>upgrade system</strong> and falling brick mechanics.</p>
                         <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz">Visit Project</a></p>
                     </div>
                 </div>
