--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <div class="project-info">
                         <h3>Bolz</h3> 
                         <span class="genre-badge">Casual, Arcade</span>
-                        <p class="desc">Solo project. A simple brick breaker game with a fun twist to it. An <strong>upgrade system</strong> and falling brick mechanics.</p>
+                        <p class="desc">Solo project. A simple brick breaker game with a fun twist to it. I <strong>upgrade system</strong> and falling brick mechanics. to make the players engaged.</p>
                         <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz">Visit Project</a></p>
                     </div>
                 </div>
