--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
                             <img src="Image/dragon (1).png" class="slide">
                             <img src="Image/dragon (2).png" class="slide">
                             <img src="Image/dragon (3).png" class="slide">
+                            <img src="Image/dragon (4).png" class="slide">
+                            <img src="Image/dragon (5).png" class="slide">
                         </div>
                         <div class="slider-controls">
                             <button onclick="moveSlide('slider-dragon', -1)">Prev</button>
